--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^1.5.4",
-    "@types/reselect": "^2.2.0",
+    "antd": "^3.22.0",
+    "axios": "^0.19.0",
+    "history": "^4.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "3.5.3"
   },
@@ -17,7 +21,13 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0"
+    "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/reselect": "^2.2.0",
+    "@types/axios": "^0.14.0",
+    "@types/history": "^4.7.2",
+    "@types/react-router": "^5.0.3",
+    "@types/redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
